Fixed nav and header, add them to all the pages, add the js to display curent page as teh selected, fixed the image that was the wrong color

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,18 @@ header {
     flex-direction: column;
 }
 
+#McCann {
+    color: #3321FF;
+    font-size: 4rem;
+    padding-left: 5%;
+}
+
+#Home{
+    color: #3321FF;
+    font-size: 2rem;
+    padding-left: 5%;
+}
+
 nav {
     margin-top: 20px;
     padding-left: 5%;
@@ -111,11 +123,20 @@ input[type="text"] {
     box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.20);
 }
 
-button {
+.SectionMiseForme button {
     margin-left: 5%;
     border-radius: 49px;
     background: #FFF;
     box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.20);
+    padding: 10px;
+    width: 50px;
+    height: 50px;
+}
+
+#FlagCorectif img{
+    width: 100%;
+    height: 95%;
+    object-fit: contain;
 }
 
 .first-sec {
